fix; KTL-994; fix join tiers spacing

--- a/src/components/JoinTiers/Tier/tier.module.css
+++ b/src/components/JoinTiers/Tier/tier.module.css
@@ -8,7 +8,7 @@
     background: #fff;
     box-shadow: 5px 2px 24px rgba(0, 0, 0, 0.1);
     border-radius: 8px;
-    padding: var(--ktl-box-section-l) var(--ktl-box-section-s);
+    padding: var(--ktl-box-section-l) var(--ktl-box-section-s) var(--ktl-box-section-s);
 
     width: 376px;
     min-height: 432px;
@@ -19,7 +19,7 @@
 
     @media (--ktl-mm) {
         width: 328px;
-        padding: var(--ktl-box-section-s) var(--ktl-box-block-l);
+        padding: var(--ktl-box-section-s) var(--ktl-box-block-l) var(--ktl-box-block-l);
     }
 
     @media (--ktl-ms) {
